# SturdyEngine3

./: .clang-format  .gitignore  CMakeLists.txt  build.bat  build.sh  license.md  vcpkg.json
Engine/Core/: SturdyEngine.cpp  SturdyEngine.h
Engine/Core/Renderer/: Renderer.cpp  Renderer.h
Engine/Core/Renderer/OpenGL(Legacy)/: README.md
Engine/Core/Renderer/VK/: Vulkan.cpp  Vulkan.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanRenderer.md
Engine/Core/Renderer/VK/Shaders/: VulkanShaderProvider.cpp  VulkanShaderProvider.h
Engine/Core/Shaders/: SLANGCompiler.cpp  SLANGCompiler.h  ShaderProvider.cpp  ShaderProvider.h
Engine/Core/Shaders/Shader/: Shader.cpp  Shader.h
Engine/Core/Window/: Window.cpp  Window.h
Engine/Core/Window/GLFW/: GLFWWindowWrapped.cpp  GLFWWindowWrapped.h
src/Editor/: main.cpp
src/Runtime/: main.cpp
